CD Flow completed

--- a/.github/workflows/cd_workflow_main.yml
+++ b/.github/workflows/cd_workflow_main.yml
@@ -85,7 +85,7 @@ jobs:
             - name: Create Release
               uses: softprops/action-gh-release@v1
               with:
-                tag_name: v${{ date('YYYYMMDD') }}
+                tag_name: v1.0.1
                 name: "Release v1.0.${{ github.run_number }}"
                 draft: false
                 prerelease: false
